# failure_prediction_research

./: .gitignore  HANDOFF.md  METHOD.tex  PROPOSAL.tex  README.md  ROADMAP.md  RUN_GUIDE.md  compute_policy.txt  task_selection.sql  tasks.csv
docs/: aws_runbook.md  method.md  onboarding.md  (+2 more)
stage2/: README.md  pyproject.toml
stage2/config/: defaults.yaml  elicitation_prompt.txt  mini_swe_qwen.yaml  pilot_instances.txt  qwen_mini.yaml  selected_instances.txt  selected_tasks.csv  swe_agent_qwen.yaml
stage2/data/: activations_smoke.npz  smoke_fixtures.json
stage2/data/smoke_probe/: probe_auroc_grid.csv  probe_report.json
stage2/notebooks/: devbugs_agent_colab.ipynb  project_and_analyze_colab.ipynb  serve_qwen_colab.ipynb
stage2/scripts/: list_regens.py  run_devbugs_batch.sh  run_mini_swe_batch.sh  run_pilot_batch.sh  serve_qwen.sh
stage2/stage2/: __init__.py
stage2/stage2/analyze/: by_position.py  final_step.py  internal_vs_elicited.py  noise_by_token_type.py  run_analyses.py  signal_to_noise.py  stats.py
stage2/stage2/common/: config.py
stage2/stage2/devbugs/: agent_loop.py  evaluate.py  run_batch.py  sandbox.py
stage2/stage2/elicit/: __init__.py  confidence.py
stage2/stage2/extract/: project_steps.py  token_spans.py
stage2/stage2/mini/: agent_loop.py
stage2/stage2/probes/: __init__.py  fit_probes.py
stage2/stage2/trajectories/: __init__.py  ingest_batch.py  parse_mini_swe_traj.py  parse_swe_traj.py  schema.py
stage2/tests/: test_devbugs_catalog.py
stage2/tests/fixtures/: mock_projections.py  sample_mini.traj.json  trajectories_mock.py
(+31 files in other folders)
