[project]
name = "value-axis-stage2"
version = "0.1.0"
description = "Stage 2 trajectory logging, projection, and readability analyses"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "accelerate>=0.25.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
# Real SWE-bench runs: the third-party mini-swe-agent drives the model, and the
# swebench harness turns its predictions into resolved/unresolved labels.
swe = ["mini-swe-agent>=1.0.0", "swebench>=2.0.0"]
# Local no-Docker dev harness (stage2/devbugs), used for offline smoke tests.
devbugs = ["pytest>=7.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["stage2*", "tests*"]
